Sorted fertig mit allen Anforderungen